@@ -1,6 +1,6 @@
 # R Commander Menu Definitions
 
-# last modified 2019-01-01 by J. Fox
+# last modified 2019-01-04 by J. Fox
 
 #   type    menu/item      operation/parent  label                                          command/menu                activation  install?
 
@@ -414,6 +414,7 @@
     item    helpMenu        command         "Introduction to the R Commander (English version)"               browseEnglishManual                ""          "manualTranslationP()"
     item    helpMenu        command         "R Commander website"                           browseRcmdrWebsite          ""          ""
     item    helpMenu        command         "About Rcmdr"                                   helpAboutCommander          ""          ""
+    item    helpMenu        command         "R Commander hex sticker"                       browseRcmdrHexSticker               ""          ""
     item    helpMenu        separator       ""                                              ""                          ""          ""
     item    helpMenu        command         "Help on active data set (if available)"        helpDataSet                 "activeDataSetP()"          ""
     item    helpMenu        separator       ""                                              ""                          ""          ""
