@@ -1,6 +1,10 @@
 Changes in version 2.6-0
 
   o Linear and generalized linear mixed models dialogs added.
+  
+  o New R Commander hex sticker.
+  
+  o Small fixes.
 
 Changes in version 2.5-2
 
